# legal_multimodal_rag

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
agent/: confidence_scorer.py  conflict_detector.py  react_agent.py  synthesiser.py  timeline_extractor.py
image_pipeline/: gpt4o_vision.py  image_handler.py  image_to_text.py
ingestion/: bailii_scraper.py  chunker.py  deduplicator.py  hmcts_scraper.py  legislation_scraper.py  pdf_parser.py  sentencing_scraper.py
reliability/: cache.py  logger.py  rate_limiter.py
retrieval/: bm25_index.py  embedder.py  faiss_index.py  lancedb_store.py  reranker.py  rrf_fusion.py
scorer/: feature_extractor.py  xgboost_predictor.py  xgboost_trainer.py
scripts/: build_index.py  fetch_data.py  fetch_images.py  fetch_training.py
